--- a/assets/css/templatemo.css
+++ b/assets/css/templatemo.css
@@ -77,7 +77,15 @@ body, ul, li, p, a, label, input, div {
 
 
 /* Hero Carousel */
-#template-mo-zay-hero-carousel { background: #191919 !important;}
+
+ #template-mo-zay-hero-carousel { background: #191919 !important;} 
+/*.fondoDiapositiva1{
+  background-image: url('assets/img/banner_img_01.jpg');  Cambia 'ruta/a/tu/imagen.jpg' por la ruta de tu imagen 
+  background-size: cover;  Ajusta la imagen para cubrir toda el área del fondo 
+  background-repeat: no-repeat;  Evita que la imagen se repita 
+  background-position: center;
+  padding: auto;
+} */
 /* Accordion */
 .templatemo-accordion a { color: #000;}
 .templatemo-accordion a:hover { color: #333d4a;}
