--- a/assets/css/templatemo.css
+++ b/assets/css/templatemo.css
@@ -33,8 +33,9 @@ body, ul, li, p, a, label, input, div {
   font-family: 'Verdana', sans-serif;
   font-size: 18px !important;
   font-weight: 300 !important;
-
 }
+
+
 .h1 {
   font-family: 'Impact', sans-serif;
   font-size: 48px !important;
@@ -82,7 +83,7 @@ body, ul, li, p, a, label, input, div {
 
 .fondoDiapositiva1{
   background-image: url('assets/img/banner_img_01.jpg'); /* Cambia 'ruta/a/tu/imagen.jpg' por la ruta de tu imagen */
-    background-size: cover; /* Asegura que la imagen cubra todo el div */
+    background-size: ; /* Asegura que la imagen cubra todo el div */
     background-repeat: no-repeat; /* Evita que la imagen se repita */
     background-position: center center; /* Centra la imagen */
     height: 100vh; /* Asegura que el div ocupe al menos la altura total de la ventana */
@@ -219,3 +220,17 @@ body, ul, li, p, a, label, input, div {
             right: 20px;
             box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
 }
+  .whatsapp-button2{
+            background-color: #25D366;
+            color: white;
+            
+            border: none;
+            border-radius: 50px;
+            font-size: 16px;
+            cursor: pointer;
+            text-decoration: none;
+            display: inline-block;
+            position: fixed;
+            
+            box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+  }
